3.3.76: Fixed a bug where players rank updates are not shown correctly Fixed a bug where playoff brackets could not be loaded